yapl/MyGrammarParser.py
# Generated from C:/Users/massa/Documents/Universidad/quinto año/Segundo semestre/Compiladores/newBeggining\MyGrammar.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MyGrammarParser ( Parser ):

    grammarFileName = "MyGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'false'", "'true'", 
                     "';'", "'{'", "'}'", "'['", "']'", "'('", "')'", "','", 
                     "'.'", "'\"'", "'''", "'+'", "'-'", "'*'", "'/'", "'~'", 
                     "':'", "'<-'", "'@'", "'<'", "'<='", "'='" ]

    symbolicNames = [ "<INVALID>", "CLASS", "ELSE", "FI", "IF", "IN", "INHERITS", 
                      "ISVOID", "LOOP", "POOL", "THEN", "WHILE", "NEW", 
                      "NOT", "LET", "FALSE", "TRUE", "SEMICOLON", "LCURLY", 
                      "RCURLY", "LSQUARE", "RSQUARE", "LROUND", "RROUND", 
                      "COMMA", "POINT", "QUOTES", "APOSTROPHE", "ADD", "SUB", 
                      "MULTIPLY", "DIVIDE", "INT_NOT", "COLON", "ASIGN", 
                      "ARROBA", "LESS_THAN", "LESS_EQUAL", "EQUAL", "LINE_COMMENT", 
                      "COMMENT", "INTEGER", "STRING", "TYPE", "ID", "WS", 
                      "ERR_TOKEN" ]

    RULE_program = 0
    RULE_class = 1
    RULE_feature = 2
    RULE_formal = 3
    RULE_expr = 4

    ruleNames =  [ "program", "class", "feature", "formal", "expr" ]

    EOF = Token.EOF
    CLASS=1
    ELSE=2
    FI=3
    IF=4
    IN=5
    INHERITS=6
    ISVOID=7
    LOOP=8
    POOL=9
    THEN=10
    WHILE=11
    NEW=12
    NOT=13
    LET=14
    FALSE=15
    TRUE=16
    SEMICOLON=17
    LCURLY=18
    RCURLY=19
    LSQUARE=20
    RSQUARE=21
    LROUND=22
    RROUND=23
    COMMA=24
    POINT=25
    QUOTES=26
    APOSTROPHE=27
    ADD=28
    SUB=29
    MULTIPLY=30
    DIVIDE=31
    INT_NOT=32
    COLON=33
    ASIGN=34
    ARROBA=35
    LESS_THAN=36
    LESS_EQUAL=37
    EQUAL=38
    LINE_COMMENT=39
    COMMENT=40
    INTEGER=41
    STRING=42
    TYPE=43
    ID=44
    WS=45
    ERR_TOKEN=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.ClassContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.ClassContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.SEMICOLON)
            else:
                return self.getToken(MyGrammarParser.SEMICOLON, i)

        def getRuleIndex(self):
            return MyGrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MyGrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 13 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 10
                self.class_()
                self.state = 11
                self.match(MyGrammarParser.SEMICOLON)
                self.state = 15 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MyGrammarParser.CLASS):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(MyGrammarParser.CLASS, 0)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.TYPE)
            else:
                return self.getToken(MyGrammarParser.TYPE, i)

        def LCURLY(self):
            return self.getToken(MyGrammarParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(MyGrammarParser.RCURLY, 0)

        def INHERITS(self):
            return self.getToken(MyGrammarParser.INHERITS, 0)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.FeatureContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.FeatureContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.SEMICOLON)
            else:
                return self.getToken(MyGrammarParser.SEMICOLON, i)

        def getRuleIndex(self):
            return MyGrammarParser.RULE_class

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass" ):
                listener.enterClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass" ):
                listener.exitClass(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass" ):
                return visitor.visitClass(self)
            else:
                return visitor.visitChildren(self)




    def class_(self):

        localctx = MyGrammarParser.ClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17
            self.match(MyGrammarParser.CLASS)
            self.state = 18
            self.match(MyGrammarParser.TYPE)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MyGrammarParser.INHERITS:
                self.state = 19
                self.match(MyGrammarParser.INHERITS)
                self.state = 20
                self.match(MyGrammarParser.TYPE)


            self.state = 23
            self.match(MyGrammarParser.LCURLY)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MyGrammarParser.ID:
                self.state = 24
                self.feature()
                self.state = 25
                self.match(MyGrammarParser.SEMICOLON)
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 32
            self.match(MyGrammarParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MyGrammarParser.ID, 0)

        def LROUND(self):
            return self.getToken(MyGrammarParser.LROUND, 0)

        def RROUND(self):
            return self.getToken(MyGrammarParser.RROUND, 0)

        def COLON(self):
            return self.getToken(MyGrammarParser.COLON, 0)

        def TYPE(self):
            return self.getToken(MyGrammarParser.TYPE, 0)

        def LCURLY(self):
            return self.getToken(MyGrammarParser.LCURLY, 0)

        def expr(self):
            return self.getTypedRuleContext(MyGrammarParser.ExprContext,0)


        def RCURLY(self):
            return self.getToken(MyGrammarParser.RCURLY, 0)

        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.FormalContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.FormalContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.COMMA)
            else:
                return self.getToken(MyGrammarParser.COMMA, i)

        def ASIGN(self):
            return self.getToken(MyGrammarParser.ASIGN, 0)

        def getRuleIndex(self):
            return MyGrammarParser.RULE_feature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature" ):
                listener.enterFeature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature" ):
                listener.exitFeature(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFeature" ):
                return visitor.visitFeature(self)
            else:
                return visitor.visitChildren(self)




    def feature(self):

        localctx = MyGrammarParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.match(MyGrammarParser.ID)
                self.state = 35
                self.match(MyGrammarParser.LROUND)
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MyGrammarParser.ID:
                    self.state = 36
                    self.formal()
                    self.state = 41
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==MyGrammarParser.COMMA:
                        self.state = 37
                        self.match(MyGrammarParser.COMMA)
                        self.state = 38
                        self.formal()
                        self.state = 43
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 46
                self.match(MyGrammarParser.RROUND)
                self.state = 47
                self.match(MyGrammarParser.COLON)
                self.state = 48
                self.match(MyGrammarParser.TYPE)
                self.state = 49
                self.match(MyGrammarParser.LCURLY)
                self.state = 50
                self.expr(0)
                self.state = 51
                self.match(MyGrammarParser.RCURLY)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.match(MyGrammarParser.ID)
                self.state = 54
                self.match(MyGrammarParser.COLON)
                self.state = 55
                self.match(MyGrammarParser.TYPE)
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MyGrammarParser.ASIGN:
                    self.state = 56
                    self.match(MyGrammarParser.ASIGN)
                    self.state = 57
                    self.expr(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MyGrammarParser.ID, 0)

        def COLON(self):
            return self.getToken(MyGrammarParser.COLON, 0)

        def TYPE(self):
            return self.getToken(MyGrammarParser.TYPE, 0)

        def getRuleIndex(self):
            return MyGrammarParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormal" ):
                return visitor.visitFormal(self)
            else:
                return visitor.visitChildren(self)




    def formal(self):

        localctx = MyGrammarParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(MyGrammarParser.ID)
            self.state = 63
            self.match(MyGrammarParser.COLON)
            self.state = 64
            self.match(MyGrammarParser.TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.ID)
            else:
                return self.getToken(MyGrammarParser.ID, i)

        def ASIGN(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.ASIGN)
            else:
                return self.getToken(MyGrammarParser.ASIGN, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.ExprContext,i)


        def LROUND(self):
            return self.getToken(MyGrammarParser.LROUND, 0)

        def RROUND(self):
            return self.getToken(MyGrammarParser.RROUND, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.COMMA)
            else:
                return self.getToken(MyGrammarParser.COMMA, i)

        def IF(self):
            return self.getToken(MyGrammarParser.IF, 0)

        def THEN(self):
            return self.getToken(MyGrammarParser.THEN, 0)

        def ELSE(self):
            return self.getToken(MyGrammarParser.ELSE, 0)

        def FI(self):
            return self.getToken(MyGrammarParser.FI, 0)

        def WHILE(self):
            return self.getToken(MyGrammarParser.WHILE, 0)

        def LOOP(self):
            return self.getToken(MyGrammarParser.LOOP, 0)

        def POOL(self):
            return self.getToken(MyGrammarParser.POOL, 0)

        def LCURLY(self):
            return self.getToken(MyGrammarParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(MyGrammarParser.RCURLY, 0)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.SEMICOLON)
            else:
                return self.getToken(MyGrammarParser.SEMICOLON, i)

        def LET(self):
            return self.getToken(MyGrammarParser.LET, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.COLON)
            else:
                return self.getToken(MyGrammarParser.COLON, i)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.TYPE)
            else:
                return self.getToken(MyGrammarParser.TYPE, i)

        def IN(self):
            return self.getToken(MyGrammarParser.IN, 0)

        def NEW(self):
            return self.getToken(MyGrammarParser.NEW, 0)

        def ISVOID(self):
            return self.getToken(MyGrammarParser.ISVOID, 0)

        def INT_NOT(self):
            return self.getToken(MyGrammarParser.INT_NOT, 0)

        def NOT(self):
            return self.getToken(MyGrammarParser.NOT, 0)

        def INTEGER(self):
            return self.getToken(MyGrammarParser.INTEGER, 0)

        def STRING(self):
            return self.getToken(MyGrammarParser.STRING, 0)

        def TRUE(self):
            return self.getToken(MyGrammarParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(MyGrammarParser.FALSE, 0)

        def ADD(self):
            return self.getToken(MyGrammarParser.ADD, 0)

        def SUB(self):
            return self.getToken(MyGrammarParser.SUB, 0)

        def MULTIPLY(self):
            return self.getToken(MyGrammarParser.MULTIPLY, 0)

        def DIVIDE(self):
            return self.getToken(MyGrammarParser.DIVIDE, 0)

        def LESS_THAN(self):
            return self.getToken(MyGrammarParser.LESS_THAN, 0)

        def LESS_EQUAL(self):
            return self.getToken(MyGrammarParser.LESS_EQUAL, 0)

        def EQUAL(self):
            return self.getToken(MyGrammarParser.EQUAL, 0)

        def POINT(self):
            return self.getToken(MyGrammarParser.POINT, 0)

        def ARROBA(self):
            return self.getToken(MyGrammarParser.ARROBA, 0)

        def getRuleIndex(self):
            return MyGrammarParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MyGrammarParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 67
                self.match(MyGrammarParser.ID)
                self.state = 68
                self.match(MyGrammarParser.ASIGN)
                self.state = 69
                self.expr(24)
                pass

            elif la_ == 2:
                self.state = 70
                self.match(MyGrammarParser.ID)
                self.state = 71
                self.match(MyGrammarParser.LROUND)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MyGrammarParser.IF) | (1 << MyGrammarParser.ISVOID) | (1 << MyGrammarParser.WHILE) | (1 << MyGrammarParser.NEW) | (1 << MyGrammarParser.NOT) | (1 << MyGrammarParser.LET) | (1 << MyGrammarParser.FALSE) | (1 << MyGrammarParser.TRUE) | (1 << MyGrammarParser.LCURLY) | (1 << MyGrammarParser.LROUND) | (1 << MyGrammarParser.INT_NOT) | (1 << MyGrammarParser.INTEGER) | (1 << MyGrammarParser.STRING) | (1 << MyGrammarParser.ID))) != 0):
                    self.state = 72
                    self.expr(0)
                    self.state = 77
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==MyGrammarParser.COMMA:
                        self.state = 73
                        self.match(MyGrammarParser.COMMA)
                        self.state = 74
                        self.expr(0)
                        self.state = 79
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 82
                self.match(MyGrammarParser.RROUND)
                pass

            elif la_ == 3:
                self.state = 83
                self.match(MyGrammarParser.IF)
                self.state = 84
                self.expr(0)
                self.state = 85
                self.match(MyGrammarParser.THEN)
                self.state = 86
                self.expr(0)
                self.state = 87
                self.match(MyGrammarParser.ELSE)
                self.state = 88
                self.expr(0)
                self.state = 89
                self.match(MyGrammarParser.FI)
                pass

            elif la_ == 4:
                self.state = 91
                self.match(MyGrammarParser.WHILE)
                self.state = 92
                self.expr(0)
                self.state = 93
                self.match(MyGrammarParser.LOOP)
                self.state = 94
                self.expr(0)
                self.state = 95
                self.match(MyGrammarParser.POOL)
                pass

            elif la_ == 5:
                self.state = 97
                self.match(MyGrammarParser.LCURLY)
                self.state = 101 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 98
                    self.expr(0)
                    self.state = 99
                    self.match(MyGrammarParser.SEMICOLON)
                    self.state = 103 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MyGrammarParser.IF) | (1 << MyGrammarParser.ISVOID) | (1 << MyGrammarParser.WHILE) | (1 << MyGrammarParser.NEW) | (1 << MyGrammarParser.NOT) | (1 << MyGrammarParser.LET) | (1 << MyGrammarParser.FALSE) | (1 << MyGrammarParser.TRUE) | (1 << MyGrammarParser.LCURLY) | (1 << MyGrammarParser.LROUND) | (1 << MyGrammarParser.INT_NOT) | (1 << MyGrammarParser.INTEGER) | (1 << MyGrammarParser.STRING) | (1 << MyGrammarParser.ID))) != 0)):
                        break

                self.state = 105
                self.match(MyGrammarParser.RCURLY)
                pass

            elif la_ == 6:
                self.state = 107
                self.match(MyGrammarParser.LET)
                self.state = 108
                self.match(MyGrammarParser.ID)
                self.state = 109
                self.match(MyGrammarParser.COLON)
                self.state = 110
                self.match(MyGrammarParser.TYPE)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MyGrammarParser.ASIGN:
                    self.state = 111
                    self.match(MyGrammarParser.ASIGN)
                    self.state = 112
                    self.expr(0)


                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MyGrammarParser.COMMA:
                    self.state = 115
                    self.match(MyGrammarParser.COMMA)
                    self.state = 116
                    self.match(MyGrammarParser.ID)
                    self.state = 117
                    self.match(MyGrammarParser.COLON)
                    self.state = 118
                    self.match(MyGrammarParser.TYPE)
                    self.state = 121
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==MyGrammarParser.ASIGN:
                        self.state = 119
                        self.match(MyGrammarParser.ASIGN)
                        self.state = 120
                        self.expr(0)


                    self.state = 127
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 128
                self.match(MyGrammarParser.IN)
                self.state = 129
                self.expr(18)
                pass

            elif la_ == 7:
                self.state = 130
                self.match(MyGrammarParser.NEW)
                self.state = 131
                self.match(MyGrammarParser.TYPE)
                pass

            elif la_ == 8:
                self.state = 132
                self.match(MyGrammarParser.ISVOID)
                self.state = 133
                self.expr(16)
                pass

            elif la_ == 9:
                self.state = 134
                self.match(MyGrammarParser.INT_NOT)
                self.state = 135
                self.expr(11)
                pass

            elif la_ == 10:
                self.state = 136
                self.match(MyGrammarParser.NOT)
                self.state = 137
                self.expr(7)
                pass

            elif la_ == 11:
                self.state = 138
                self.match(MyGrammarParser.LROUND)
                self.state = 139
                self.expr(0)
                self.state = 140
                self.match(MyGrammarParser.RROUND)
                pass

            elif la_ == 12:
                self.state = 142
                self.match(MyGrammarParser.ID)
                pass

            elif la_ == 13:
                self.state = 143
                self.match(MyGrammarParser.INTEGER)
                pass

            elif la_ == 14:
                self.state = 144
                self.match(MyGrammarParser.STRING)
                pass

            elif la_ == 15:
                self.state = 145
                self.match(MyGrammarParser.TRUE)
                pass

            elif la_ == 16:
                self.state = 146
                self.match(MyGrammarParser.FALSE)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 191
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,18,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 189
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
                    if la_ == 1:
                        localctx = MyGrammarParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 149
                        if not self.precpred(self._ctx, 15):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 15)")
                        self.state = 150
                        self.match(MyGrammarParser.ADD)
                        self.state = 151
                        self.expr(16)
                        pass

                    elif la_ == 2:
                        localctx = MyGrammarParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 152
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 153
                        self.match(MyGrammarParser.SUB)
                        self.state = 154
                        self.expr(15)
                        pass

                    elif la_ == 3:
                        localctx = MyGrammarParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 155
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 156
                        self.match(MyGrammarParser.MULTIPLY)
                        self.state = 157
                        self.expr(14)
                        pass

                    elif la_ == 4:
                        localctx = MyGrammarParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 158
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 159
                        self.match(MyGrammarParser.DIVIDE)
                        self.state = 160
                        self.expr(13)
                        pass

                    elif la_ == 5:
                        localctx = MyGrammarParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 161
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 162
                        self.match(MyGrammarParser.LESS_THAN)
                        self.state = 163
                        self.expr(11)
                        pass

                    elif la_ == 6:
                        localctx = MyGrammarParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 164
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 165
                        self.match(MyGrammarParser.LESS_EQUAL)
                        self.state = 166
                        self.expr(10)
                        pass

                    elif la_ == 7:
                        localctx = MyGrammarParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 167
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 168
                        self.match(MyGrammarParser.EQUAL)
                        self.state = 169
                        self.expr(9)
                        pass

                    elif la_ == 8:
                        localctx = MyGrammarParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 170
                        if not self.precpred(self._ctx, 23):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 23)")
                        self.state = 173
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==MyGrammarParser.ARROBA:
                            self.state = 171
                            self.match(MyGrammarParser.ARROBA)
                            self.state = 172
                            self.match(MyGrammarParser.TYPE)

